Fix image aligns

--- a/themes/fromscratch/src/scss/layout/_wordpress-blocks.scss
+++ b/themes/fromscratch/src/scss/layout/_wordpress-blocks.scss
@@ -217,70 +217,85 @@
 
   figure {
     padding: 0;
+  }
 
-    &.wp-block-image {
-      margin-top: 24px;
-      margin-bottom: 24px;
+  .wp-block-image {
+    margin-top: 24px;
+    margin-bottom: 24px;
+
+    &:first-child {
+      margin-top: 0;
+    }
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+
+    @media (max-width: $breakpoint-s) {
+      margin-top: 16px;
+      margin-bottom: 16px;
 
       &:first-child {
         margin-top: 0;
       }
+    }
 
-      &:last-child {
-        margin-bottom: 0;
-      }
+    &.alignleft {
+      margin-left: 0;
+      margin-right: auto;
+    }
 
-      @media (max-width: $breakpoint-s) {
-        margin-top: 16px;
-        margin-bottom: 16px;
+    &.aligncenter {
+      margin-left: auto;
+      margin-right: auto;
+    }
 
-        &:first-child {
-          margin-top: 0;
-        }
-      }
+    &.alignright {
+      margin-left: auto;
+      margin-right: 0;
+    }
 
-      a {
-        display: block;
-      }
+    a {
+      display: block;
+    }
 
+    img {
+      border-radius: var(--fs-border-radius);
+    }
+
+    &.is-style-framed {
       img {
         border-radius: var(--fs-border-radius);
-      }
+        border: 1px solid rgba(0, 0, 0, 0.15);
 
-      &.is-style-framed {
-        img {
-          border-radius: var(--fs-border-radius);
-          border: 1px solid rgba(0, 0, 0, 0.15);
-
-          @media (min-resolution: 1.9dppx) {
-            border-width: 1.5px;
-          }
+        @media (min-resolution: 1.9dppx) {
+          border-width: 1.5px;
         }
       }
+    }
 
-      &.is-style-round {
-        img {
-          border-radius: 50%;
-        }
+    &.is-style-round {
+      img {
+        border-radius: 50%;
       }
+    }
 
-      &.is-style-sharp {
-        img {
-          border-radius: 0;
-        }
+    &.is-style-sharp {
+      img {
+        border-radius: 0;
       }
+    }
 
+    .wp-element-caption {
+      margin: 4px 0 0;
+      font-size: var(--fs-font-size-s);
+      line-height: var(--fs-line-height-s);
+      color: var(--fs-color-gray-600);
+    }
+
+    &.-no-image-caption {
       .wp-element-caption {
-        margin: 4px 0 0;
-        font-size: var(--fs-font-size-s);
-        line-height: var(--fs-line-height-s);
-        color: var(--fs-color-gray-600);
-      }
-
-      &.-no-image-caption {
-        .wp-element-caption {
-          display: none;
-        }
+        display: none;
       }
     }
   }
